; ModuleID = '/home/carl/AnghaBench/esp-idf/components/lwip/test_afl_host/extr_network_mock.c_pbuf_try_get_at.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/lwip/test_afl_host/extr_network_mock.c_pbuf_try_get_at.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pbuf = type { i64, i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @pbuf_try_get_at(%struct.pbuf* %0, i64 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.pbuf*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca %struct.pbuf*, align 8
  store %struct.pbuf* %0, %struct.pbuf** %4, align 8
  store i64 %1, i64* %5, align 8
  %8 = load %struct.pbuf*, %struct.pbuf** %4, align 8
  %9 = load i64, i64* %5, align 8
  %10 = call %struct.pbuf* @pbuf_skip(%struct.pbuf* %8, i64 %9, i64* %6)
  store %struct.pbuf* %10, %struct.pbuf** %7, align 8
  %11 = load %struct.pbuf*, %struct.pbuf** %7, align 8
  %12 = icmp ne %struct.pbuf* %11, null
  br i1 %12, label %13, label %27

13:                                               ; preds = %2
  %14 = load %struct.pbuf*, %struct.pbuf** %7, align 8
  %15 = getelementptr inbounds %struct.pbuf, %struct.pbuf* %14, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  %17 = load i64, i64* %6, align 8
  %18 = icmp ugt i64 %16, %17
  br i1 %18, label %19, label %27

19:                                               ; preds = %13
  %20 = load %struct.pbuf*, %struct.pbuf** %7, align 8
  %21 = getelementptr inbounds %struct.pbuf, %struct.pbuf* %20, i32 0, i32 1
  %22 = load i64, i64* %21, align 8
  %23 = inttoptr i64 %22 to i32*
  %24 = load i64, i64* %6, align 8
  %25 = getelementptr inbounds i32, i32* %23, i64 %24
  %26 = load i32, i32* %25, align 4
  store i32 %26, i32* %3, align 4
  br label %28

27:                                               ; preds = %13, %2
  store i32 -1, i32* %3, align 4
  br label %28

28:                                               ; preds = %27, %19
  %29 = load i32, i32* %3, align 4
  ret i32 %29
}

declare dso_local %struct.pbuf* @pbuf_skip(%struct.pbuf*, i64, i64*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
